--- a/assets/villa.html
+++ b/assets/villa.html
@@ -134,7 +134,7 @@
             <th>Einheit</th>
             <th>Lage</th>
             <th style="text-align: center;">Zimmer</th>
-            <th style="text-align: right;">Fläsche</th>
+            <th style="text-align: right;">Fläche</th>
             <th style="text-align: right;">Grundriss</th>
           </tr>
           <tr>
