--- a/impressum.html
+++ b/impressum.html
@@ -51,11 +51,11 @@
         Angaben gemäß § 5 TMG
       </h3>
       <p>
-        AN Grundbesitz
+        AN Grundbesitz GmbH
         <br />
-        GmbH Unter den Eichen 101 12203
+        Unter den Eichen 101
         <br />
-        Berlin
+        12203 Berlin
         <br />
         <br />
         Handelsregister: HRB 178086 B
@@ -78,7 +78,7 @@
         E-Mail: info@an-grundbesitz.de
       </p>
       <h3>
-        h3teuer-ID
+        Steuer-ID
       </h3>
       <p>
         Umsatzsteuer-Identifikationsnummer gemäß § 27 a Umsatzsteuergesetz:
@@ -89,8 +89,8 @@
       </h3>
       <p>
         Die Gewerbeanmeldung nach § 34 c GewO wurde am 14.06.2016 durch
-        Ordnungsamt Berlin Steglitz- Zehlendorf, Unter den Eichen 1, 12203
-        Berlin erteilt.
+        Ordnungsamt Berlin Steglitz-Zehlendorf, Unter den Eichen 1, 12203 Berlin
+        erteilt.
       </p>
       <h3>
         Aufsichtsbehörde
