--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
           <div class="list">
             <ul>
               <li>
-                zwei luxuriöse Stadtvillen - Zwölf exklusive Apartments für
+                zwei luxuriöse Stadtvillen — zwölf exklusive Apartments für
                 Familien oder Singles
               </li>
               <li>
-                Elegante, zeitgenössische Architektur mit großzügigen
+                elegante, zeitgenössische Architektur mit großzügigen
                 Grundrissen und moderner Ausstattung
               </li>
               <li>
@@ -87,12 +87,8 @@
               </li>
               <li>50% der Einheiten sind barrierefrei</li>
               <br />
-              <li>
-                Grundstücksgröße: 775 m2
-              </li>
-              <li>
-                Gesamtwohnfläche: 1.493 m2
-              </li>
+              <li>Grundstücksgröße: 775 m <sup>2</sup></li>
+              <li>Gesamtwohnfläche: 1.493 m <sup>2</sup></li>
               <li>
                 Baubeginn: IV 2020
               </li>
@@ -110,9 +106,9 @@
       <section class="intro">
         <div class="rellax" data-rellax-speed="-0.6">
           Modernes Wohnen im angesagten Berliner Stadtteil Lichtenberg. In
-          idyllischer Lage nahe der Rummelsburger See, unweit der pulsierenden
-          Szene-Bezirke, bietet das F6 zwölf luxuriöse Eigentumswohnungen, in
-          denen Wohnträume wahr werden.
+          idyllischer Lage nahe der Rummelsburger Bucht, unweit der pulsierenden
+          Szene-Bezirke, bietet das F6 zwölf luxuriöse Eigentumswohnungen und
+          zwei Stadtvillen, in denen Wohnträume wahr werden.
         </div>
       </section>
 
