--- a/assets/villa.html
+++ b/assets/villa.html
@@ -1,17 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"
     />
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
-    integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ="
-    crossorigin="anonymous"
-  />
+    <meta name="format-detection" content="telephone=no">
     <link rel="stylesheet" href="css/style.css" />
     <title>F6 living — Villa</title>
   </head>
@@ -42,6 +37,9 @@
             </li>
             <li>
               <a href="#footer">Kontakt</a>
+            </li>
+            <li>
+              <a href="en/index.html">EN</a>
             </li>
           </ul>
         </div>
@@ -204,7 +202,7 @@
 
     <footer id="footer">
       <div class="contact">
-        Kontaktieren sie uns:
+        Kontaktieren Sie uns:
         <br />
         +49 30 8972 7797
         <br />
