--- a/f6.html
+++ b/f6.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="format-detection" content="telephone=no" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>F6 Living — Home</title>
+    <title>F6 Living — Über F6</title>
   </head>
   <body>
     <header>
@@ -33,6 +34,9 @@
             </li>
             <li>
               <a href="#footer">Kontakt</a>
+            </li>
+            <li>
+              <a href="en/index.html">EN</a>
             </li>
           </ul>
         </div>
@@ -122,7 +126,7 @@
 
     <footer id="footer">
       <div class="contact">
-        Kontaktieren sie uns:
+        Kontaktieren Sie uns:
         <br />
         +49 30 8972 7797
         <br />
