--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"
     />
+    <meta name="format-detection" content="telephone=no" />
     <link rel="stylesheet" href="css/style.css" />
     <title>F6 Living — Home</title>
   </head>
@@ -36,6 +37,9 @@
             </li>
             <li>
               <a href="#footer">Kontakt</a>
+            </li>
+            <li>
+              <a href="en/index.html">EN</a>
             </li>
           </ul>
         </div>
@@ -93,7 +97,7 @@
                 Baubeginn: IV 2020
               </li>
               <li>
-                Fertigstellungg: IV 2021
+                Fertigstellung: IV 2021
               </li>
             </ul>
             <!-- END___list-->
@@ -150,7 +154,7 @@
     </div>
     <footer id="footer">
       <div class="contact">
-        Kontaktieren sie uns:
+        Kontaktieren Sie uns:
         <br />
         +49 30 8972 7797
         <br />
