--- a/lage.html
+++ b/lage.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"/>
+    <meta name="format-detection" content="telephone=no">
     <link rel="stylesheet" href="css/style.css" />
-    <title>F6 Living — Home</title>
+    <title>F6 Living — Lage</title>
   </head>
   <body>
     <header>
@@ -31,6 +32,9 @@
             </li>
             <li>
               <a href="#footer">Kontakt</a>
+            </li>
+            <li>
+              <a href="en/index.html">EN</a>
             </li>
           </ul>
         </div>
@@ -85,7 +89,7 @@
       </div>
       <div class="container-map">
         <div class="map">
-          <img src="./img/map03.svg" alt="" />
+          <img src="./img/address-de.svg" alt="" />
         </div>
           <div class="caption">
             <strong>Alles da!</strong>
@@ -102,7 +106,7 @@
             <br />
             Supermarkt  (800 m)
             <br />
-            Riverside (14 min)
+            Rummelsburger Bucht (14 min)
           </div>
           <!-- END___container-map--> 
       </div>
@@ -111,7 +115,7 @@
     
     <footer id="footer">
       <div class="contact">
-        Kontaktieren sie uns:
+        Kontaktieren Sie uns:
         <br />
         +49 30 8972 7797
         <br />
