test loading css & img english version

--- a/assets/en/index.html
+++ b/assets/en/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"
     />
     <meta name="format-detection" content="telephone=no" />
-    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <title>F6 Living — Home</title>
   </head>
   <body>
@@ -61,14 +61,14 @@
           <!-- END___left-->
         </div>
         <div class="right">
-          <img src="/assets/img/01.jpeg" />
+          <img src="../img/01.jpeg" />
         </div>
         <!--END___top-->
       </section>
 
       <section class="top2">
         <div class="left">
-          <img src="/assets/img/02.jpeg" class="rellax" data-rellax-speed="2" />
+          <img src="../img/02.jpeg" class="rellax" data-rellax-speed="2" />
         </div>
         <div class="right">
           <div class="list">
