--- a/assets/en/index.html
+++ b/assets/en/index.html
@@ -39,7 +39,7 @@
               <a href="#footer">Contact</a>
             </li>
             <li>
-              <a href="/assets/index.html">DE</a>
+              <a href="../index.html">DE</a>
             </li>
           </ul>
         </div>
@@ -121,7 +121,7 @@
 
       <section class="info">
         <div>
-          <img src="/assets/img/03.jpeg" />
+          <img src="../img/03.jpeg" />
         </div>
         <div class="next">
           <div class="grundriss">
@@ -133,7 +133,7 @@
               Apartments
             </a>
             <a href="apartments.html">
-              <img src="/assets/img/home-arrow-right.svg" />
+              <img src="../img/home-arrow-right.svg" />
             </a>
           </div>
 
@@ -146,7 +146,7 @@
               Villa
             </a>
             <a href="villa.html">
-              <img src="/assets/img/home-arrow-right.svg" />
+              <img src="../img/home-arrow-right.svg" />
             </a>
           </div>
           <!--END___next-->
@@ -166,7 +166,7 @@
         &nbsp;
       </div>
       <div class="impressum">
-        <span><a href="impressum.html">Impressum</a></span>
+        <span><a href="../impressum.html">Impressum</a></span>
       </div>
     </footer>
 
