--- a/assets/en/location.html
+++ b/assets/en/location.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"/>
     <meta name="format-detection" content="telephone=no">
-    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <title>F6 Living — Location</title>
   </head>
   <body>
@@ -36,7 +36,7 @@
               <a href="#footer">Contact</a>
             </li>
             <li>
-              <a href="/assets/index.html">DE</a>
+              <a href="../index.html">DE</a>
             </li>
           </ul>
         </div>
@@ -54,7 +54,7 @@
         </div>
       <div class="container-map">
           <div class="map">
-            <img src="/assets/img/map01.svg" alt="" /> 
+            <img src="../img/map01.svg" alt="" /> 
       </div>
         <div class="text">
         <p>
@@ -95,7 +95,7 @@
       </div>
       <div class="container-map">
         <div class="map">
-          <img src="/assets/img/address-en.svg" alt="" />
+          <img src="../img/address-en.svg" alt="" />
         </div>
           <div class="caption">
             <strong>Everything within reach!</strong>
@@ -130,7 +130,7 @@
         &nbsp;
       </div>
       <div class="impressum">
-        <span><a href="impressum.html">Impressum</a></span>
+        <span><a href="../impressum.html">Impressum</a></span>
       </div>
     </footer>
 
