--- a/assets/en/villa.html
+++ b/assets/en/villa.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"
     />
     <meta name="format-detection" content="telephone=no">
-    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <title>F6 living — Villa</title>
   </head>
   <body>
@@ -39,7 +39,7 @@
               <a href="#footer">Contact</a>
             </li>
             <li>
-              <a href="/assets/index.html">DE</a>
+              <a href="../index.html">DE</a>
             </li>
           </ul>
         </div>
@@ -66,27 +66,27 @@
           <div class="slider-wrapper">
             <div class="inner">
               <article>
-                <img src="/assets/img/villa/01.jpg" />
+                <img src="../img/villa/01.jpg" />
               </article>
 
               <article>
-                <img src="/assets/img/villa/02.jpg" />
+                <img src="../img/villa/02.jpg" />
               </article>
 
               <article>
-                <img src="/assets/img/villa/03.jpg" />
+                <img src="../img/villa/03.jpg" />
               </article>
 
               <article>
-                <img src="/assets/img/villa/04.jpg" />
+                <img src="../img/villa/04.jpg" />
               </article>
 
               <article>
-                <img src="/assets/img/villa/05.jpg" />
+                <img src="../img/villa/05.jpg" />
               </article>
 
               <article>
-                <img src="/assets/img/villa/06.jpg" />
+                <img src="../img/villa/06.jpg" />
               </article>
             </div>
             <!-- .inner -->
@@ -147,8 +147,8 @@
               </strong>
             </td>
             <td style="text-align: right;">
-              <a href="/assets/pdf/english/F6Living_Plan_Vi_A_engl.pdf" target="_blank">
-                <img src="/assets/img/download-arrow-01.svg" />
+              <a href="../pdf/english/F6Living_Plan_Vi_A_engl.pdf" target="_blank">
+                <img src="../img/download-arrow-01.svg" />
               </a>
             </td>
           </tr>
@@ -166,8 +166,8 @@
               >
             </td>
             <td style="text-align: right;">
-              <a href="/assets/pdf/english/F6Living_Plan_Vil_B_engl.pdf" target="_blank">
-                <img src="/assets/img/download-arrow-01.svg" />
+              <a href="../pdf/english/F6Living_Plan_Vil_B_engl.pdf" target="_blank">
+                <img src="../img/download-arrow-01.svg" />
               </a>
             </td>
           </tr>
@@ -186,7 +186,7 @@
 
           <p>
             Additional information and images can be found in our digital brochure.
-            <a href="/assets/pdf/english/F6Living_Expose_engl.pdf" target="_blank">
+            <a href="../pdf/english/F6Living_Expose_engl.pdf" target="_blank">
               Download
             </a>
           </p>
@@ -208,7 +208,7 @@
         &nbsp;
       </div>
       <div class="impressum">
-        <span><a href="impressum.html">Impressum</a></span>
+        <span><a href="../impressum.html">Impressum</a></span>
       </div>
     </footer>
 
