--- a/en/apartments.html
+++ b/en/apartments.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"
     />
     <meta name="format-detection" content="telephone=no">
-    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <title>F6 living — Apartments</title>
   </head>
   <body>
@@ -39,7 +39,7 @@
               <a href="#footer">Contact</a>
             </li>
             <li>
-              <a href="/assets/index.html">DE</a>
+              <a href="../index.html">DE</a>
             </li>
           </ul>
         </div>
@@ -66,27 +66,27 @@
             <div class="slider-wrapper">
               <div class="inner">
                 <article>
-                  <img src="/assets/img/apt/01.jpg" />
+                  <img src="../img/apt/01.jpg" />
                 </article>
 
                 <article>
-                  <img src="/assets/img/apt/02.jpg" />
+                  <img src="../img/apt/02.jpg" />
                 </article>
 
                 <article>
-                  <img src="/assets/img/apt/03.jpg" />
+                  <img src="../img/apt/03.jpg" />
                 </article>
 
                 <article>
-                  <img src="/assets/img/apt/04.jpg" />
+                  <img src="../img/apt/04.jpg" />
                 </article>
 
                 <article>
-                  <img src="/assets/img/apt/05.jpg" />
+                  <img src="../img/apt/05.jpg" />
                 </article>
 
                 <article>
-                  <img src="/assets/img/apt/06.jpg" />
+                  <img src="../img/apt/06.jpg" />
                 </article>
               </div>
               <!-- .inner -->
@@ -147,8 +147,8 @@
                 </strong>
               </td>
               <td style="text-align: right;">
-                <a href="/assets/pdf/english/F6Living_Plan_Ap_01_engl.pdf" target="_blank">
-                  <img src="/assets/img/download-arrow-01.svg" />
+                <a href="../pdf/english/F6Living_Plan_Ap_01_engl.pdf" target="_blank">
+                  <img src="../img/download-arrow-01.svg" />
                 </a>
              
               </td>
@@ -167,8 +167,8 @@
                 >
               </td>
               <td style="text-align: right;">
-                <a href="/assets/pdf/english/F6Living_Plan_Ap_02_engl.pdf" target="_blank">
-                  <img src="/assets/img/download-arrow-01.svg" />
+                <a href="../pdf/english/F6Living_Plan_Ap_02_engl.pdf" target="_blank">
+                  <img src="../img/download-arrow-01.svg" />
                 </a>
               </td>
             </tr>
@@ -186,8 +186,8 @@
                 </strong>
               </td>
               <td style="text-align: right;">
-                <a href="/assets/pdf/english/F6Living_Plan_Ap_03_07_09_engl.pdf" target="_blank">
-                  <img src="/assets/img/download-arrow-01.svg" />
+                <a href="../pdf/english/F6Living_Plan_Ap_03_07_09_engl.pdf" target="_blank">
+                  <img src="../img/download-arrow-01.svg" />
                 </a>
               </td>
             </tr>
@@ -205,8 +205,8 @@
                 </strong>
               </td>
               <td style="text-align: right;">
-                <a href="/assets/pdf/english/F6Living_Plan_Ap_04_08_10l_eng.pdf" target="_blank">
-                  <img src="/assets/img/download-arrow-01.svg" />
+                <a href="../pdf/english/F6Living_Plan_Ap_04_08_10l_eng.pdf" target="_blank">
+                  <img src="../img/download-arrow-01.svg" />
                 </a>
               </td>
             </tr>
@@ -224,8 +224,8 @@
                 </strong>
               </td>
               <td style="text-align: right;">
-                <a href="/assets/pdf/english/F6Living_Plan_Ap_05_engl.pdf" target="_blank">
-                  <img src="/assets/img/download-arrow-01.svg" />
+                <a href="../pdf/english/F6Living_Plan_Ap_05_engl.pdf" target="_blank">
+                  <img src="../img/download-arrow-01.svg" />
                 </a>
               </td>
             </tr>
@@ -243,8 +243,8 @@
                 </strong>
               </td>
               <td style="text-align: right;">
-                <a href="/assets/pdf/english/F6Living_Plan_Ap_06_engl.pdf" target="_blank">
-                  <img src="/assets/img/download-arrow-01.svg" />
+                <a href="../pdf/english/F6Living_Plan_Ap_06_engl.pdf" target="_blank">
+                  <img src="../img/download-arrow-01.svg" />
                 </a>
               </td>
             </tr>
@@ -262,8 +262,8 @@
                 </strong>
               </td>
               <td style="text-align: right;">
-                <a href="/assets/pdf/english/F6Living_Plan_Ap_03_07_09_engl.pdf" target="_blank">
-                  <img src="/assets/img/download-arrow-01.svg" />
+                <a href="../pdf/english/F6Living_Plan_Ap_03_07_09_engl.pdf" target="_blank">
+                  <img src="../img/download-arrow-01.svg" />
                 </a>
               </td>
             </tr>
@@ -281,8 +281,8 @@
                 </strong>
               </td>
               <td style="text-align: right;">
-                <a href="/assets/pdf/english/F6Living_Plan_Ap_04_08_10l_eng.pdf" target="_blank">
-                  <img src="/assets/img/download-arrow-01.svg" />
+                <a href="../pdf/english/F6Living_Plan_Ap_04_08_10l_eng.pdf" target="_blank">
+                  <img src="../img/download-arrow-01.svg" />
                 </a>
               </td>
             </tr>
@@ -300,8 +300,8 @@
                 </strong>
               </td>
               <td style="text-align: right;">
-                <a href="/assets/pdf/english/F6Living_Plan_Ap_03_07_09_engl.pdf" target="_blank">
-                  <img src="/assets/img/download-arrow-01.svg" />
+                <a href="../pdf/english/F6Living_Plan_Ap_03_07_09_engl.pdf" target="_blank">
+                  <img src="../img/download-arrow-01.svg" />
                 </a>
               </td>
             </tr>
@@ -319,8 +319,8 @@
                 </strong>
               </td>
               <td style="text-align: right;">
-                <a href="/assets/pdf/english/F6Living_Plan_Ap_04_08_10l_eng.pdf" target="_blank">
-                  <img src="/assets/img/download-arrow-01.svg" />
+                <a href="../pdf/english/F6Living_Plan_Ap_04_08_10l_eng.pdf" target="_blank">
+                  <img src="../img/download-arrow-01.svg" />
                 </a>
               </td>
             </tr>
@@ -338,8 +338,8 @@
                 </strong>
               </td>
               <td style="text-align: right;">
-                <a href="/assets/pdf/english/F6Living_Plan_Ap_11_engl.pdf" target="_blank">
-                  <img src="/assets/img/download-arrow-01.svg" />
+                <a href="../pdf/english/F6Living_Plan_Ap_11_engl.pdf" target="_blank">
+                  <img src="../img/download-arrow-01.svg" />
                 </a>
               </td>
             </tr>
@@ -357,8 +357,8 @@
                 </strong>
               </td>
               <td style="text-align: right;">
-                <a href="/assets/pdf/english/F6Living_Plan_Ap_12_engl.pdf" target="_blank">
-                  <img src="/assets/img/download-arrow-01.svg" />
+                <a href="../pdf/english/F6Living_Plan_Ap_12_engl.pdf" target="_blank">
+                  <img src="../img/download-arrow-01.svg" />
                 </a>
               </td>
             </tr>
@@ -373,7 +373,7 @@
             </div>
             <p>
               Additional information and images can be found in our digital brochure.
-              <a href="/assets/pdf/english/F6Living_Expose_engl.pdf" target="_blank">
+              <a href="../pdf/english/F6Living_Expose_engl.pdf" target="_blank">
                 Download
               </a>
             </p>
@@ -395,7 +395,7 @@
             &nbsp;
           </div>
           <div class="impressum">
-            <span><a href="impressum.html">Impressum</a></span>
+            <span><a href="../impressum.html">Impressum</a></span>
           </div>
         </footer>
     
