--- a/en/f6.html
+++ b/en/f6.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="format-detection" content="telephone=no" />
-    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <title>F6 Living — About F6</title>
   </head>
   <body>
@@ -36,7 +36,7 @@
               <a href="#footer">Contact</a>
             </li>
             <li>
-              <a href="/assets/index.html">DE</a>
+              <a href="../index.html">DE</a>
             </li>
           </ul>
         </div>
@@ -85,7 +85,7 @@
       </section>
       <section class="showcase">
         <div class="image">
-          <img src="/assets/img/04.jpeg" />
+          <img src="../img/04.jpeg" />
         </div>
 
         <div class="next">
@@ -98,7 +98,7 @@
               Apartments
             </a>
             <a href="villa.html">
-              <img src="/assets/img/home-arrow-right.svg" />
+              <img src="../img/home-arrow-right.svg" />
             </a>
           </div>
 
@@ -111,7 +111,7 @@
               Villa
             </a>
             <a href="villa.html">
-              <img src="/assets/img/home-arrow-right.svg" />
+              <img src="../img/home-arrow-right.svg" />
             </a>
           </div>
           <!-- END___next-->
@@ -132,21 +132,8 @@
         &nbsp;
       </div>
       <div class="impressum">
-        <span><a href="impressum.html">Impressum</a></span>
+        <span><a href="../impressum.html">Impressum</a></span>
       </div>
     </footer>
-
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/rellax/1.12.1/rellax.min.js"
-      ;
-      integrity="sha256-+xf9aJnHocnmrigq2hIDJGBSAnJdF5NH+Ooe5J2PHiI="
-      ;
-      crossorigin="anonymous"
-      ;
-    ></script>
-
-    <script>
-      let rellax = new Rellax(".rellax");
-    </script>
   </body>
 </html>
