--- a/en/f6.html
+++ b/en/f6.html
@@ -50,7 +50,7 @@
           <h1>
             <hr />
             <strong>Luxurious</strong>
-            Livings in <br />
+            Living in <br />
             Berlin-Lichtenberg
           </h1>
         </div>
