master b- en text upgrade villa

--- a/assets/en/villa.html
+++ b/assets/en/villa.html
@@ -106,11 +106,13 @@
         <!-- END___Wrapper___-->
 
         <div class="list">
-          <ul>
+         <ul>
             <li>spacious floor plans</li>
             <li>high-quality bathrooms</li>
             <li>heated floors</li>
-            <li>passenger lift</li>
+            <li>utility room</li>
+            <li>spacious roof and garden terrace</li>
+            <li>private garden</li>
           </ul>
         </div>
         <!-- END___list -->
