--- a/apartments.html
+++ b/apartments.html
@@ -289,7 +289,7 @@
               </td>
             </tr>
             <tr>
-              <td><strong> 09 </strong></td>
+              <td><strong> 09a </strong></td>
               <td>4. OG rechts</td>
               <td style="text-align: center;">2</td>
               <td style="text-align: right;">
@@ -303,6 +303,25 @@
               </td>
               <td style="text-align: right;">
                 <a href="./pdf/german/F6Living_Plan_Ap_03_07_09_ger.pdf" target="_blank">
+                  <img src="./img/download-arrow-01.svg" />
+                </a>
+              </td>
+            </tr>
+             <tr>
+              <td><strong> 09b </strong></td>
+              <td>4. OG rechts</td>
+              <td style="text-align: center;">4</td>
+              <td style="text-align: right;">
+                <strong
+                  >122
+                  <p>
+                    m
+                    <sup>2</sup>
+                  </p>
+                </strong>
+              </td>
+              <td style="text-align: right;">
+                <a href="./pdf/german/F6Living_Plan_Ap_09_alt_ger.pdf" target="_blank">
                   <img src="./img/download-arrow-01.svg" />
                 </a>
               </td>
