--- a/en/apartments.html
+++ b/en/apartments.html
@@ -287,7 +287,7 @@
               </td>
             </tr>
             <tr>
-              <td><strong> 09 </strong></td>
+              <td><strong> 09a </strong></td>
               <td>4th Floor right</td>
               <td style="text-align: center;">2</td>
               <td style="text-align: right;">
@@ -301,6 +301,25 @@
               </td>
               <td style="text-align: right;">
                 <a href="../pdf/english/F6Living_Plan_Ap_03_07_09_engl.pdf" target="_blank">
+                  <img src="../img/download-arrow-01.svg" />
+                </a>
+              </td>
+            </tr>
+            <tr>
+              <td><strong> 09b </strong></td>
+              <td>4th Floor right</td>
+              <td style="text-align: center;">4</td>
+              <td style="text-align: right;">
+                <strong
+                  >122
+                  <p>
+                    m
+                    <sup>2</sup>
+                  </p>
+                </strong>
+              </td>
+              <td style="text-align: right;">
+                <a href="../pdf/english/F6Living_Plan_Ap_09_alt_engl.pdf" target="_blank">
                   <img src="../img/download-arrow-01.svg" />
                 </a>
               </td>
